# syngenious-bot

./: .gitignore  butts.py  main.py  package.json  pyproject.toml  utils.py
cogs/: DevTools.py  Profiles.py  Projects.py  Roles.py
